[package]
name = "khatson"
version = "0.1.0"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
edition = "2018"
description = "Attacut ported Thai word segmentation/breaking library and command line"
documentation = "https://github.com/veer66/khatson/blob/master/README.md"
homepage = "https://github.com/veer66/khatson"
repository = "https://github.com/veer66/khatson"
readme = "README.md"
keywords = ["text", "nlp", "thai", "library"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
env_logger = "0.8.4"
serde_json = "1.0.64"
serde = "1.0.126"
anyhow = "1.0"
thiserror = "1.0"
