[package]
name = "khatson"
version = "0.2.0"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
edition = "2018"
description = "Attacut ported Thai word segmentation/breaking command line"
documentation = "https://github.com/veer66/khatson/blob/master/README.md"
homepage = "https://github.com/veer66/khatson"
repository = "https://github.com/veer66/khatson"
readme = "README.md"
keywords = ["text", "nlp", "thai", "library"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chawuek = { path = "./chawuek" }
